--- a/master.css
+++ b/master.css
@@ -164,3 +164,76 @@ a{
     font-size:1.2em;
     margin: .5em;
 }
+
+.junq{
+    width:0;
+    height:0;
+    border-left: solid 35px transparent;
+    border-right: solid 35px transparent;
+    border-bottom: solid 60px #18dae0;
+
+    position:absolute;
+    right:10px;
+    bottom:10px;
+}
+.junq::before{
+    content:'';
+    display:block;
+    width:20px;
+    height:20px;
+    background:#1c1c1d;
+
+    position:relative;
+    right:10px;
+    bottom:-25px;
+
+    border-radius: 80% 5%;
+    transform:rotate(45deg);
+}
+.junq::after{
+    content:'';
+    display:block;
+    width:18px;
+    height:18px;
+    background:#18dae0;
+
+    position:relative;
+    border-radius:50%;
+
+    right:9px;
+    bottom:-1px;
+}
+.junq-lash{
+    position:absolute;
+    right:44px;
+    bottom:23px;
+    width:2px;
+    height:5px;
+
+    background:#1c1c1d;
+    /*background: #f0f;*/
+}
+.junq-lash::before{
+    content:'';
+    display:block;
+    width:3px;
+    height:5px;
+    background:#1c1c1d;
+
+    position:relative;
+    right:8px;
+    bottom:2px;
+    transform:rotate(23deg);
+}
+.junq-lash::after{
+    content:'';
+    display:block;
+    width:3px;
+    height:6px;
+    background:#1c1c1d;
+
+    position:relative;
+    right:-7px;
+    bottom:7px;
+    transform:rotate(-23deg);
+}
